[Clean-up] Address 305043@main feedback https://bugs.webkit.org/show_bug.cgi?id=304858 rdar://167447059

Reviewed by Said Abou-Hallawa.

This patch addresses Said's comment (good feedback) from 305043@main and
in summary following are changes:

> Renamed test to clarify what it does and fixed spelling error as well.
> Removed redundant <svg> and related rules and fixed formatting issues
> Removed comment since code was self-explaining.

* LayoutTests/svg/as-image/svg-image-aspect-ration-par-none-expected.html: Removed.
* LayoutTests/svg/as-image/svg-image-no-viewbox-preserve-aspect-ratio-none-expected.html: Added.
* LayoutTests/svg/as-image/svg-image-no-viewbox-preserve-aspect-ratio-none.html: Renamed from LayoutTests/svg/as-image/svg-image-aspect-ration-par-none.html.
* Source/WebCore/svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::viewBoxToViewTransform const):

Canonical link: https://commits.webkit.org/305067@main